aster/tests/pass/use_core_io.as
# Aster1 test: `use` module preprocessor + core.io

use core.io

def main() returns i32
    println("ok")
    return 0

