aster/tests/fail/break_outside_loop.as
# Expected: compile failure (`break` outside loop)

def main() returns i32
    break
    return 0

